@@ -18,4 +18,5 @@ Bug fixes:
 -  #685 : when publishing a content, a wrarning should be raised if no section is chosen
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Small refactoring of folder_localrole_edit.py to move setting `reindex` out
+  of loop.
